--- a/docs/visual-basic/misc/bc2003.md
+++ b/docs/visual-basic/misc/bc2003.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC2003
 ms.assetid: 05240edd-e753-453b-b831-569f669d94d2
-ms.openlocfilehash: 501ecc263a29760931837668a833ec1fbca9f90d
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 2133e6525c861f8d2321d5b9b4355c1e1312ad9b
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33600232"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54490897"
 ---
-# <a name="response-file-ltfilenamegt-included-multiple-times"></a><span data-ttu-id="78af3-102">지시 파일 &lt;filename&gt; 여러 번 포함 했습니다.</span><span class="sxs-lookup"><span data-stu-id="78af3-102">Response file &lt;filename&gt; included multiple times</span></span>
-<span data-ttu-id="78af3-103">지시 파일을 두 번 이상 지정했습니다.</span><span class="sxs-lookup"><span data-stu-id="78af3-103">A response file has been specified more than once.</span></span> <span data-ttu-id="78af3-104">지시 파일에는 컴파일할 소스 코드 파일 및 컴파일러 옵션이 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="78af3-104">Response files contain compiler options and source code files to compile.</span></span>  
+# <a name="response-file-ltfilenamegt-included-multiple-times"></a><span data-ttu-id="d2394-102">지시 파일 &lt;filename&gt; 여러 번 포함 했습니다.</span><span class="sxs-lookup"><span data-stu-id="d2394-102">Response file &lt;filename&gt; included multiple times</span></span>
+<span data-ttu-id="d2394-103">지시 파일을 두 번 이상 지정했습니다.</span><span class="sxs-lookup"><span data-stu-id="d2394-103">A response file has been specified more than once.</span></span> <span data-ttu-id="d2394-104">지시 파일에는 컴파일할 소스 코드 파일 및 컴파일러 옵션이 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="d2394-104">Response files contain compiler options and source code files to compile.</span></span>  
   
- <span data-ttu-id="78af3-105">**오류 ID:** BC2003</span><span class="sxs-lookup"><span data-stu-id="78af3-105">**Error ID:** BC2003</span></span>  
+ <span data-ttu-id="d2394-105">**오류 ID:** BC2003</span><span class="sxs-lookup"><span data-stu-id="d2394-105">**Error ID:** BC2003</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="78af3-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="78af3-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d2394-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d2394-106">To correct this error</span></span>  
   
--   <span data-ttu-id="78af3-107">중복된 지시 파일 지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="78af3-107">Remove redundant response file specifiers.</span></span>  
+-   <span data-ttu-id="d2394-107">중복된 지시 파일 지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="d2394-107">Remove redundant response file specifiers.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="78af3-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="78af3-108">See Also</span></span>  
- [<span data-ttu-id="78af3-109">Visual Basic 컴파일러 옵션 범주별 목록</span><span class="sxs-lookup"><span data-stu-id="78af3-109">Visual Basic Compiler Options Listed by Category</span></span>](../../visual-basic/reference/command-line-compiler/compiler-options-listed-by-category.md)
+## <a name="see-also"></a><span data-ttu-id="d2394-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="d2394-108">See also</span></span>
+- [<span data-ttu-id="d2394-109">Visual Basic 컴파일러 옵션 범주별 목록</span><span class="sxs-lookup"><span data-stu-id="d2394-109">Visual Basic Compiler Options Listed by Category</span></span>](../../visual-basic/reference/command-line-compiler/compiler-options-listed-by-category.md)
