--- a/docs/visual-basic/misc/bc30184.md
+++ b/docs/visual-basic/misc/bc30184.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30184
 ms.assetid: b7f5ebf0-10c8-4320-8caf-dffc24ae8a71
-ms.openlocfilehash: a099c1da4e10f7704abd5ff09bf6ecd220312410
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: a02668d23d44cec0ae8e08c02af31a9dcbf9331e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53769963"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54494407"
 ---
 # <a name="end-enum-must-be-preceded-by-a-matching-enum"></a>'End Enum'은 짝이 되는 'Enum' 뒤에 와야 합니다.
 `End Enum` 문이 해당 `Enum` 문 없이 발생합니다. `End Enum` 은 해당 `Enum` 문 뒤에 와야 합니다.  
@@ -25,5 +25,5 @@ ms.locfileid: "53769963"
   
 2.  `Enum` 멤버의 형식이 올바르게 지정되었는지 확인합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Enum 문](../../visual-basic/language-reference/statements/enum-statement.md)
+## <a name="see-also"></a>참고자료
+- [Enum 문](../../visual-basic/language-reference/statements/enum-statement.md)
