--- a/docs/visual-basic/misc/bc30217.md
+++ b/docs/visual-basic/misc/bc30217.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30217
 ms.assetid: 02e4f418-fd5d-41a4-8896-70d06eb5035a
-ms.openlocfilehash: c95366fe5323509b105125ad0a85eed863fb6548
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: bead6f6b588d993ff0663f66f9d6fa801259dec2
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33607175"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54494537"
 ---
 # <a name="string-constant-expected"></a>문자열 상수가 필요합니다.
 문자열 상수가 필요한 위치에 큰따옴표(") 이외의 문자가 있습니다. 한 가지 가능한 원인은 문자열에서 따옴표가 누락된 것입니다.  
@@ -25,5 +25,5 @@ ms.locfileid: "33607175"
   
 2.  문자열 상수를 제공합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [상수 및 리터럴 데이터 형식](../../visual-basic/programming-guide/language-features/constants-enums/constant-and-literal-data-types.md)
+## <a name="see-also"></a>참고자료
+- [상수 및 리터럴 데이터 형식](../../visual-basic/programming-guide/language-features/constants-enums/constant-and-literal-data-types.md)
