--- a/docs/visual-basic/misc/bc30389.md
+++ b/docs/visual-basic/misc/bc30389.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30389
 ms.assetid: fae58a68-df91-4741-a8c9-f1bb10e166e2
-ms.openlocfilehash: 7d185f38904ac1162641ad7d45be005dfaa67712
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: ff8ce3ca0db30ccbffde8b9bf553a9cc64f2dca5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53768221"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54495190"
 ---
 # <a name="ltmethodgt-is-not-accessible-in-this-context-because-it-is-ltmodifiergt"></a>'&lt;메서드&gt;'is not이 컨텍스트에서 액세스할 수 있기 때문 에'&lt;한정자&gt;'
 `Private`으로 선언되었으므로 이 컨텍스트에서 액세스할 수 없는 메서드에 액세스하려고 했습니다. 이 오류에 대 한 가능한 원인은 Visual Basic 컴파일러는 클래스의 모든 멤버 가져오고 대/소문자를 이므로 대/소문자만 다른 이름이 충돌할 수 있습니다.  
@@ -25,5 +25,5 @@ ms.locfileid: "53768221"
   
 -   이름이 충돌하여 오류가 발생하는 경우 충돌하는 이름에 대/소문자 이외의 다른 점을 지정합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [전용](../../visual-basic/language-reference/modifiers/private.md)
+## <a name="see-also"></a>참고자료
+- [전용](../../visual-basic/language-reference/modifiers/private.md)
