--- a/docs/visual-basic/misc/bc32084.md
+++ b/docs/visual-basic/misc/bc32084.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32084
 ms.assetid: a7ff58d3-8c67-40e4-9fd8-92cc00524c22
-ms.openlocfilehash: 0d0b8d5f0813237ba84700f40834ebb3b91ed668
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 4b200c04fc9b2436669e0e2a451e51797ef2a0f0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775020"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54494550"
 ---
 # <a name="type-parameter-lttypeparametername1gt-must-have-either-a-new-constraint-or-a-structure-constraint-to-satisfy-the-new-constraint-for-type-parameter-lttypeparametername2gt"></a>형식 매개 변수 '&lt;typeparametername1&gt;'에 'New' 제약 조건 또는 형식 매개 변수에 대 한 'New' 제약 조건을 만족 하려면 'Structure' 제약 조건이 있어야 합니다'&lt;typeparametername2&gt;'
 문이 `New` 제약 조건을 충족하기 위해 제한되지 않은 형식 매개 변수를 전달하는 제네릭 형식을 생성합니다.  
@@ -43,10 +43,10 @@ End Class
   
 -   형식 매개 변수에서 `Structure` 또는 `New` 제약 조건을 충족할 수 없는 경우 제네릭 형식으로 전달하지 마세요. 다른 형식 매개 변수를 형식 인수로 전달해야 합니다.  
   
-## <a name="see-also"></a>참고 항목
+## <a name="see-also"></a>참고자료
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
-- [New 연산자](../../visual-basic/language-reference/operators/new-operator.md)  
-- [구조체(Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)  
-- [클래스 (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md)  
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [New 연산자](../../visual-basic/language-reference/operators/new-operator.md)
+- [구조체(Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)
+- [클래스 (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md)
 - [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
