--- a/docs/visual-basic/misc/bc32115.md
+++ b/docs/visual-basic/misc/bc32115.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32115
 ms.assetid: 98053645-fa76-4826-a7c1-f1bdf3511863
-ms.openlocfilehash: b46485e5d4c7e435569f22d7c3fddf2abf43d15f
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: c2de7eb75d2a3b2e07a3d692d64ce2dd94f3e9e0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53777308"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54494472"
 ---
 # <a name="systemnullable-does-not-satisfy-the-structure-constraint-for-type-parameter-lttypeparameternamegt"></a>'System.Nullable' 형식 매개 변수에 대 한 'Structure' 제약 조건을 충족 하지 않는 '&lt;typeparametername&gt;'
 <xref:System.Nullable%601> 제약 조건이 있는 형식 매개 변수에 `Structure` 의 형식 인수를 전달하여 제네릭 형식을 호출합니다.  
@@ -25,8 +25,8 @@ ms.locfileid: "53777308"
   
 -   형식 매개 변수에서 `Structure` 제약 조건을 제거하거나 형식 인수를 <xref:System.Nullable%601>이외의 다른 값 형식으로 변경합니다.  
   
-## <a name="see-also"></a>참고 항목
+## <a name="see-also"></a>참고자료
 
-- <xref:System.Nullable%601>  
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- <xref:System.Nullable%601>
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
 - [구조체(Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)
