--- a/docs/visual-basic/misc/bc30206.md
+++ b/docs/visual-basic/misc/bc30206.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30206
 ms.assetid: f9def54d-eb4c-4ab7-bb8f-53800b87be36
-ms.openlocfilehash: 7a80cfbd13ddd1e9f25e2dc59ba5e3f77555450a
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 7a9bb08b8e66e355f8d49e033002606840fdd4b8
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775072"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54542173"
 ---
 # <a name="option-must-be-followed-by-compare-explicit-infer-or-strict"></a>'Option' 뒤에는 'Compare', 'Explicit', 'Infer' 또는 'Strict'가 와야 합니다.
 `Option` 문에서 설정할 수 있는 유일한 옵션은 `Compare`, `Explicit`, `Infer`및 `Strict`입니다.  
@@ -25,9 +25,9 @@ ms.locfileid: "53775072"
   
 -   `Option` 문이 완전하지 않은지 여부를 확인합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [옵션 \<키워드 > 문](../../visual-basic/language-reference/statements/option-keyword-statement.md)  
- [Option Compare 문](../../visual-basic/language-reference/statements/option-compare-statement.md)  
- [Option Explicit 문](../../visual-basic/language-reference/statements/option-explicit-statement.md)  
- [Option Infer 문](../../visual-basic/language-reference/statements/option-infer-statement.md)  
- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
+## <a name="see-also"></a>참고자료
+- [옵션 \<키워드 > 문](../../visual-basic/language-reference/statements/option-keyword-statement.md)
+- [Option Compare 문](../../visual-basic/language-reference/statements/option-compare-statement.md)
+- [Option Explicit 문](../../visual-basic/language-reference/statements/option-explicit-statement.md)
+- [Option Infer 문](../../visual-basic/language-reference/statements/option-infer-statement.md)
+- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
