--- a/docs/visual-basic/misc/bc2034.md
+++ b/docs/visual-basic/misc/bc2034.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC2034
 ms.assetid: 8009553a-f6ba-4d2b-8ddd-8a9357bc928e
-ms.openlocfilehash: 45f5c74738dc69305e01ac85df95b68f98730b3c
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c91c70bd9ff185bb644fa6cea26b78eb4a5cdf81
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33602043"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54528500"
 ---
-# <a name="option-win32manifest-ignored"></a><span data-ttu-id="37ebe-102">/win32manifest 옵션이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="37ebe-102">Option /win32manifest ignored</span></span>
-<span data-ttu-id="37ebe-103">/win32manifest 옵션이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="37ebe-103">Option /win32manifest ignored.</span></span> <span data-ttu-id="37ebe-104">이 옵션은 대상이 어셈블리일 때만 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="37ebe-104">It can be specified only when the target is an assembly.</span></span>  
+# <a name="option-win32manifest-ignored"></a><span data-ttu-id="db8c2-102">/win32manifest 옵션이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="db8c2-102">Option /win32manifest ignored</span></span>
+<span data-ttu-id="db8c2-103">/win32manifest 옵션이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="db8c2-103">Option /win32manifest ignored.</span></span> <span data-ttu-id="db8c2-104">이 옵션은 대상이 어셈블리일 때만 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="db8c2-104">It can be specified only when the target is an assembly.</span></span>  
   
- <span data-ttu-id="37ebe-105">`/win32manifest` 옵션이 `/target` 로 설정되었을 때 Visual Basic 컴파일러에 `module`컴파일러 옵션이 전달되었습니다.</span><span class="sxs-lookup"><span data-stu-id="37ebe-105">The Visual Basic compiler has been passed the `/win32manifest` compiler option when the `/target` option is set to `module`.</span></span>  
+ <span data-ttu-id="db8c2-105">`/win32manifest` 옵션이 `/target` 로 설정되었을 때 Visual Basic 컴파일러에 `module`컴파일러 옵션이 전달되었습니다.</span><span class="sxs-lookup"><span data-stu-id="db8c2-105">The Visual Basic compiler has been passed the `/win32manifest` compiler option when the `/target` option is set to `module`.</span></span>  
   
- <span data-ttu-id="37ebe-106">**오류 ID:** BC2034</span><span class="sxs-lookup"><span data-stu-id="37ebe-106">**Error ID:** BC2034</span></span>  
+ <span data-ttu-id="db8c2-106">**오류 ID:** BC2034</span><span class="sxs-lookup"><span data-stu-id="db8c2-106">**Error ID:** BC2034</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="37ebe-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="37ebe-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="db8c2-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="db8c2-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="37ebe-108">`/win32manifest` 컴파일러 옵션을 제거하거나 `/target` 옵션을 `exe`, `winexe`또는 `library`로 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="37ebe-108">Remove the `/win32manifest` compiler option or set the `/target` option to `exe`, `winexe`, or `library`.</span></span>  
+1.  <span data-ttu-id="db8c2-108">`/win32manifest` 컴파일러 옵션을 제거하거나 `/target` 옵션을 `exe`, `winexe`또는 `library`로 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="db8c2-108">Remove the `/win32manifest` compiler option or set the `/target` option to `exe`, `winexe`, or `library`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="37ebe-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="37ebe-109">See Also</span></span>  
- [<span data-ttu-id="37ebe-110">/target (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="37ebe-110">/target (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/target.md)  
- [<span data-ttu-id="37ebe-111">/win32manifest (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="37ebe-111">/win32manifest (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/win32manifest.md)  
- [<span data-ttu-id="37ebe-112">Visual Basic 명령줄 컴파일러</span><span class="sxs-lookup"><span data-stu-id="37ebe-112">Visual Basic Command-Line Compiler</span></span>](../../visual-basic/reference/command-line-compiler/index.md)
+## <a name="see-also"></a><span data-ttu-id="db8c2-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="db8c2-109">See also</span></span>
+- [<span data-ttu-id="db8c2-110">/target (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="db8c2-110">/target (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/target.md)
+- [<span data-ttu-id="db8c2-111">/ win32manifest (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="db8c2-111">/win32manifest (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/win32manifest.md)
+- [<span data-ttu-id="db8c2-112">Visual Basic 명령줄 컴파일러</span><span class="sxs-lookup"><span data-stu-id="db8c2-112">Visual Basic Command-Line Compiler</span></span>](../../visual-basic/reference/command-line-compiler/index.md)
