--- a/docs/visual-basic/misc/bc30231.md
+++ b/docs/visual-basic/misc/bc30231.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30231
 ms.assetid: 16e6c3ea-ce89-4646-8c3f-0ef51324bc13
-ms.openlocfilehash: f6bca6ee24f80c73847cdbef8720bb86ece640b2
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3c8562c839bcb34444cb50dd60482c73a298a7fb
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53776762"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54534136"
 ---
-# <a name="implements-not-valid-in-modules"></a><span data-ttu-id="a86ec-102">모듈에는 'Implements'를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="a86ec-102">'Implements' not valid in Modules</span></span>
-<span data-ttu-id="a86ec-103">`Implements` 문 또는 절이 모듈 내에서 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="a86ec-103">An `Implements` statement or clause occurs inside a module.</span></span> <span data-ttu-id="a86ec-104">모듈은 인터페이스를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="a86ec-104">Modules cannot implement interfaces.</span></span>  
+# <a name="implements-not-valid-in-modules"></a><span data-ttu-id="d1fa2-102">모듈에는 'Implements'를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="d1fa2-102">'Implements' not valid in Modules</span></span>
+<span data-ttu-id="d1fa2-103">`Implements` 문 또는 절이 모듈 내에서 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="d1fa2-103">An `Implements` statement or clause occurs inside a module.</span></span> <span data-ttu-id="d1fa2-104">모듈은 인터페이스를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="d1fa2-104">Modules cannot implement interfaces.</span></span>  
   
- <span data-ttu-id="a86ec-105">**오류 ID:** BC30231</span><span class="sxs-lookup"><span data-stu-id="a86ec-105">**Error ID:** BC30231</span></span>  
+ <span data-ttu-id="d1fa2-105">**오류 ID:** BC30231</span><span class="sxs-lookup"><span data-stu-id="d1fa2-105">**Error ID:** BC30231</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a86ec-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a86ec-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d1fa2-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d1fa2-106">To correct this error</span></span>  
   
--   <span data-ttu-id="a86ec-107">`Implements` 문 또는 절을 제거하거나 모듈을 클래스로 다시 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="a86ec-107">Remove the `Implements` statement or clause, or retype the module as a class.</span></span>  
+-   <span data-ttu-id="d1fa2-107">`Implements` 문 또는 절을 제거하거나 모듈을 클래스로 다시 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="d1fa2-107">Remove the `Implements` statement or clause, or retype the module as a class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a86ec-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a86ec-108">See Also</span></span>  
- [<span data-ttu-id="a86ec-109">Implements 문</span><span class="sxs-lookup"><span data-stu-id="a86ec-109">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)  
- [<span data-ttu-id="a86ec-110">Module 문</span><span class="sxs-lookup"><span data-stu-id="a86ec-110">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+## <a name="see-also"></a><span data-ttu-id="d1fa2-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="d1fa2-108">See also</span></span>
+- [<span data-ttu-id="d1fa2-109">Implements 문</span><span class="sxs-lookup"><span data-stu-id="d1fa2-109">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="d1fa2-110">Module 문</span><span class="sxs-lookup"><span data-stu-id="d1fa2-110">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
