--- a/docs/visual-basic/misc/bc30615.md
+++ b/docs/visual-basic/misc/bc30615.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30615
 ms.assetid: c8606b17-b50b-4014-b76e-b748d57e9389
-ms.openlocfilehash: 02b3983c6b3fe8209a85b82469dbb104a4fcb2bc
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 338bf71e66b46793e16cc4328942447b26af33b0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53779512"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54530818"
 ---
-# <a name="end-statement-cannot-be-used-in-class-library-projects"></a><span data-ttu-id="bfd99-102">'End' 문은 클래스 라이브러리 프로젝트에 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="bfd99-102">'End' statement cannot be used in class library projects</span></span>
-<span data-ttu-id="bfd99-103">DLL을 만드는 데 사용된 클래스 라이브러리 프로젝트에서 `End` 키워드를 사용하여 프로시저의 코드 실행을 중지할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="bfd99-103">Class library projects used to create DLLs do not allow the use of the `End` keyword to stop the execution of code in a procedure.</span></span>  
+# <a name="end-statement-cannot-be-used-in-class-library-projects"></a><span data-ttu-id="51c3b-102">'End' 문은 클래스 라이브러리 프로젝트에 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="51c3b-102">'End' statement cannot be used in class library projects</span></span>
+<span data-ttu-id="51c3b-103">DLL을 만드는 데 사용된 클래스 라이브러리 프로젝트에서 `End` 키워드를 사용하여 프로시저의 코드 실행을 중지할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="51c3b-103">Class library projects used to create DLLs do not allow the use of the `End` keyword to stop the execution of code in a procedure.</span></span>  
   
- <span data-ttu-id="bfd99-104">**오류 ID:** BC30615</span><span class="sxs-lookup"><span data-stu-id="bfd99-104">**Error ID:** BC30615</span></span>  
+ <span data-ttu-id="51c3b-104">**오류 ID:** BC30615</span><span class="sxs-lookup"><span data-stu-id="51c3b-104">**Error ID:** BC30615</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bfd99-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="bfd99-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="51c3b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="51c3b-105">To correct this error</span></span>  
   
--   <span data-ttu-id="bfd99-106">`While` 및 `For` 와 같은 제어 구조를 사용하여 프로그램 실행 흐름을 제어합니다.</span><span class="sxs-lookup"><span data-stu-id="bfd99-106">Use control structures such as `While` and `For` to control the flow of program execution.</span></span>  
+-   <span data-ttu-id="51c3b-106">`While` 및 `For` 와 같은 제어 구조를 사용하여 프로그램 실행 흐름을 제어합니다.</span><span class="sxs-lookup"><span data-stu-id="51c3b-106">Use control structures such as `While` and `For` to control the flow of program execution.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bfd99-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="bfd99-107">See Also</span></span>  
- [<span data-ttu-id="bfd99-108">제어 흐름</span><span class="sxs-lookup"><span data-stu-id="bfd99-108">Control Flow</span></span>](../../visual-basic/programming-guide/language-features/control-flow/index.md)
+## <a name="see-also"></a><span data-ttu-id="51c3b-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="51c3b-107">See also</span></span>
+- [<span data-ttu-id="51c3b-108">제어 흐름</span><span class="sxs-lookup"><span data-stu-id="51c3b-108">Control Flow</span></span>](../../visual-basic/programming-guide/language-features/control-flow/index.md)
