--- a/docs/visual-basic/misc/bc30798.md
+++ b/docs/visual-basic/misc/bc30798.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC30798
 ms.assetid: bfa66627-516a-4955-977d-92372bcea090
-ms.openlocfilehash: 4ccc387064ebd3bdd565372ef1c515203711ef78
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 7c09218da21aaf7542e5f55579b584829bbd054c
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53770418"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54527421"
 ---
-# <a name="ltelementnamegt-for-the-imports-alias-to-ltqualifiedelementnamegt-does-not-refer-to-a-namespace-class-structure-interface-enum-or-module"></a><span data-ttu-id="a733f-102">'&lt;elementname&gt;'에 대 한 Imports 별칭'에 대 한&lt;qualifiedelementname&gt;' Namespace, 클래스, 구조체, 인터페이스, 열거형 또는 모듈을 나타내지 않습니다</span><span class="sxs-lookup"><span data-stu-id="a733f-102">'&lt;elementname&gt;' for the Imports alias to '&lt;qualifiedelementname&gt;' does not refer to a Namespace, Class, Structure, Interface, Enum or Module</span></span>
-<span data-ttu-id="a733f-103">[Imports 문 (.NET Namespace 및 형식)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) 가져올 수 없는 프로그래밍 요소를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="a733f-103">An [Imports Statement (.NET Namespace and Type)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) specifies a programming element that cannot be imported.</span></span>  
+# <a name="ltelementnamegt-for-the-imports-alias-to-ltqualifiedelementnamegt-does-not-refer-to-a-namespace-class-structure-interface-enum-or-module"></a><span data-ttu-id="fb856-102">'&lt;elementname&gt;'에 대 한 Imports 별칭'에 대 한&lt;qualifiedelementname&gt;' Namespace, 클래스, 구조체, 인터페이스, 열거형 또는 모듈을 나타내지 않습니다</span><span class="sxs-lookup"><span data-stu-id="fb856-102">'&lt;elementname&gt;' for the Imports alias to '&lt;qualifiedelementname&gt;' does not refer to a Namespace, Class, Structure, Interface, Enum or Module</span></span>
+<span data-ttu-id="fb856-103">[Imports 문 (.NET Namespace 및 형식)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) 가져올 수 없는 프로그래밍 요소를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="fb856-103">An [Imports Statement (.NET Namespace and Type)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) specifies a programming element that cannot be imported.</span></span>  
   
- <span data-ttu-id="a733f-104">`Imports` 문은 요소 이름 앞에 오는 한정 문자열에 대한 요구 사항을 줄이거나 제거하는 데 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="a733f-104">The `Imports` statement is used to reduce or remove the need for a qualifying string in front of an element name.</span></span> <span data-ttu-id="a733f-105">`Imports` 문 자체에서 요소를 한정하여 고유한 요소 선언에 대한 명확한 경로를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="a733f-105">You qualify the element in the `Imports` statement itself to provide an unambiguous path to a unique declaration of the element.</span></span> <span data-ttu-id="a733f-106">그런 다음 요소에 대한 참조를 한정할 필요가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="a733f-106">Thereafter, you do not need to qualify references to the element.</span></span>  
+ <span data-ttu-id="fb856-104">`Imports` 문은 요소 이름 앞에 오는 한정 문자열에 대한 요구 사항을 줄이거나 제거하는 데 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="fb856-104">The `Imports` statement is used to reduce or remove the need for a qualifying string in front of an element name.</span></span> <span data-ttu-id="fb856-105">`Imports` 문 자체에서 요소를 한정하여 고유한 요소 선언에 대한 명확한 경로를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="fb856-105">You qualify the element in the `Imports` statement itself to provide an unambiguous path to a unique declaration of the element.</span></span> <span data-ttu-id="fb856-106">그런 다음 요소에 대한 참조를 한정할 필요가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="fb856-106">Thereafter, you do not need to qualify references to the element.</span></span>  
   
- <span data-ttu-id="a733f-107">네임스페이스에`Imports` 가 가장 일반적으로 사용되지만 클래스, 모듈, 구조체, 인터페이스 또는 열거형을 가져와서 긴 한정 문자열이 없는 해당 요소에 대한 참조를 허용할 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a733f-107">`Imports` is most commonly used for namespaces, but you can also import a class, module, structure, interface, or enumeration to allow reference to its elements without a long qualifying string.</span></span>  
+ <span data-ttu-id="fb856-107">네임스페이스에`Imports` 가 가장 일반적으로 사용되지만 클래스, 모듈, 구조체, 인터페이스 또는 열거형을 가져와서 긴 한정 문자열이 없는 해당 요소에 대한 참조를 허용할 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="fb856-107">`Imports` is most commonly used for namespaces, but you can also import a class, module, structure, interface, or enumeration to allow reference to its elements without a long qualifying string.</span></span>  
   
- <span data-ttu-id="a733f-108">자세한 내용은 "를 포함 하는 요소 가져오기"를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="a733f-108">For more information, see "Importing Containing Elements" in.</span></span>  
+ <span data-ttu-id="fb856-108">자세한 내용은 "를 포함 하는 요소 가져오기"를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="fb856-108">For more information, see "Importing Containing Elements" in.</span></span>  
   
- <span data-ttu-id="a733f-109">**오류 ID:** BC30798</span><span class="sxs-lookup"><span data-stu-id="a733f-109">**Error ID:** BC30798</span></span>  
+ <span data-ttu-id="fb856-109">**오류 ID:** BC30798</span><span class="sxs-lookup"><span data-stu-id="fb856-109">**Error ID:** BC30798</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a733f-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a733f-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fb856-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fb856-110">To correct this error</span></span>  
   
-1.  <span data-ttu-id="a733f-111">`Imports` 문의 한정 문자열에서, 특히 한정하는 요소인 문자열의 마지막 요소의 철자를 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="a733f-111">Check the spelling of the elements in the qualification string in the `Imports` statement, especially the last element in the string, which is the element you are qualifying.</span></span>  
+1.  <span data-ttu-id="fb856-111">`Imports` 문의 한정 문자열에서, 특히 한정하는 요소인 문자열의 마지막 요소의 철자를 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="fb856-111">Check the spelling of the elements in the qualification string in the `Imports` statement, especially the last element in the string, which is the element you are qualifying.</span></span>  
   
-2.  <span data-ttu-id="a733f-112">한정하는 요소가 적합한 형식(네임스페이스, 클래스, 모듈, 구조체, 인터페이스 또는 열거형)인지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="a733f-112">Verify that the element you are qualifying is of an eligible type (namespace, class, module, structure, interface, or enumeration).</span></span> <span data-ttu-id="a733f-113">적합한 형식이 아닌 경우 `Imports` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="a733f-113">If it is not, remove the `Imports` statement.</span></span>  
+2.  <span data-ttu-id="fb856-112">한정하는 요소가 적합한 형식(네임스페이스, 클래스, 모듈, 구조체, 인터페이스 또는 열거형)인지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="fb856-112">Verify that the element you are qualifying is of an eligible type (namespace, class, module, structure, interface, or enumeration).</span></span> <span data-ttu-id="fb856-113">적합한 형식이 아닌 경우 `Imports` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="fb856-113">If it is not, remove the `Imports` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a733f-114">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a733f-114">See Also</span></span>  
- [<span data-ttu-id="a733f-115">참조 및 Imports 문</span><span class="sxs-lookup"><span data-stu-id="a733f-115">References and the Imports Statement</span></span>](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
+## <a name="see-also"></a><span data-ttu-id="fb856-114">참고자료</span><span class="sxs-lookup"><span data-stu-id="fb856-114">See also</span></span>
+- [<span data-ttu-id="fb856-115">참조 및 Imports 문</span><span class="sxs-lookup"><span data-stu-id="fb856-115">References and the Imports Statement</span></span>](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
