--- a/docs/visual-basic/misc/bc30130.md
+++ b/docs/visual-basic/misc/bc30130.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30130
 ms.assetid: 199e1629-a07f-413d-bda6-7ce91f81c85b
-ms.openlocfilehash: bd8a3afe14a69a96a5827202268e073c47b5bee8
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3f3a4edebcf61045aa084d15c5b98f145876e109
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53782573"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54575978"
 ---
 # <a name="module-attribute-ltattributenamegt-is-not-valid-lterrorgt"></a>모듈 특성 '&lt;attributename&gt;' 올바르지 않습니다: &lt;오류&gt;
 공용 언어 런타임은 모듈에 대한 특성을 사용할 수 없습니다.
@@ -25,6 +25,6 @@ ms.locfileid: "53782573"
 
 2. 따옴표 붙은 오류 메시지를 검사하고 적절한 조치를 수행합니다.
 
-## <a name="see-also"></a>참고 항목
- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)  
- <xref:System.AttributeUsageAttribute?displayProperty=nameWithType>
+## <a name="see-also"></a>참고자료
+- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+- <xref:System.AttributeUsageAttribute?displayProperty=nameWithType>
