--- a/docs/visual-basic/misc/bc31060.md
+++ b/docs/visual-basic/misc/bc31060.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31060
 ms.assetid: 33d3ca8b-711b-4f76-9b79-d5428b28dd2f
-ms.openlocfilehash: 903f77f3c581a0b70e9729e51bbe29abf1b540b5
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e477d21efa0f8772a50123c4891c7425edfe77e9
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53777009"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54572528"
 ---
 # <a name="ltpropertynamegt-implicitly-defines-ltmembernamegt-which-conflicts-with-a-member-of-the-same-name-in-lttypegt-lttypenamegt"></a>'&lt;propertyname&gt;'를 암시적으로 정의'&lt;membername&gt;'에 있는 동일한 이름의 멤버와 충돌 하는 &lt;형식&gt; '&lt;typename&gt;'
 형식 멤버의 이름이 속성에 대해 암시적으로 만든 멤버 이름과 충돌합니다. 속성은 정의된 멤버와 충돌할 수 있는 여러 암시적 변수를 암시적으로 만듭니다.  
@@ -23,7 +23,7 @@ ms.locfileid: "53777009"
   
 -   이름 충돌을 제거하려면 명시적으로 선언된 멤버 이름을 바꿉니다.  
   
-## <a name="see-also"></a>참고 항목  
-   
- [속성 프로시저](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)  
- 
+## <a name="see-also"></a>참고자료
+
+- [속성 프로시저](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+
